<resources>
    <string name="app_name">FoodCounter</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hint_mail">Эл.почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_passwordRepeat">Повторите пароль</string>
    <string name="signin">Войти</string>
    <string name="hint_name">Ваше имя</string>
    <string name="signup">Создать новый аккаунт?</string>
    <string name="signup2">Зарегистрироваться</string>
    <string name="name_app">Food Counter</string>
    <string name="start_reg">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="error_mail">Неверный адрес электронной почты</string>
    <string name="errorReg_password">Пароль должен содержать не менее 8 символов</string>
    <string name="errorLog_password">Неверный пароль</string>
    <string name="txtv_welcome">Добро пожаловать в</string>
    <string name="txt_restore">Восстановить пароль</string>
    <string name="txt_enterMAil">Введите свой e-mail, на который Вам будет направлен SMS-код для смены пароля </string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_send">Отправить</string>
</resources>