<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbg2"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oleo_script_bold"
        android:text="@string/txtv_welcome"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/txtnameApp"
        app:layout_constraintEnd_toEndOf="@+id/txtnameApp"
        app:layout_constraintStart_toStartOf="@+id/txtnameApp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtnameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/rock_salt"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/oran_app"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="42dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/white"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/red_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/icon__sms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTxt_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_mail"
            android:maxLength="31"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="234dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_25"
        android:fontFamily="@font/advent_pro_bold"
        android:hapticFeedbackEnabled="false"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        :layout_constraintEnd_toEndOf="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="42dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red_app"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/pass_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:maxLength="21"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/btn_forget"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="-32dp"
        android:gravity="end"
        android:linksClickable="true"
        android:text="@string/forgot_password"
        android:fontFamily="@font/advent_pro_bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/advent_pro_bold"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:text="@string/signup"
        android:textColor="@color/oran_app"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

    <ImageView
        android:id="@+id/facebook_draw"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:srcCompat="@drawable/ic__facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>