<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbg2"
    tools:context=".RegActivity">


    <TextView
        android:id="@+id/txtnameApp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/rock_salt"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/oran_app"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_yourname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/white"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/red_app"
        app:layout_constraintEnd_toEndOf="@+id/txtnameApp2"
        app:layout_constraintStart_toStartOf="@+id/txtnameApp2"
        app:layout_constraintTop_toBottomOf="@+id/txtnameApp2"
        app:startIconDrawable="@drawable/__icon__user_">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_regName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_name"
            android:maxLength="31"
            android:maxLines="1"
            android:textColorHint="@color/white"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/white"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/red_app"
        app:layout_constraintEnd_toEndOf="@+id/input_yourname"
        app:layout_constraintStart_toStartOf="@+id/input_yourname"
        app:layout_constraintTop_toBottomOf="@+id/input_yourname"
        app:startIconDrawable="@drawable/icon__sms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_regMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_mail"
            android:maxLength="31"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red_app"
        app:layout_constraintEnd_toEndOf="@+id/input_mail"
        app:layout_constraintStart_toStartOf="@+id/input_mail"
        app:layout_constraintTop_toBottomOf="@+id/input_mail"
        app:startIconDrawable="@drawable/vector_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:maxLength="21"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_passwordRepeat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        :layout_constraintEnd_toEndOf="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red_app"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:startIconDrawable="@drawable/vector_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_passwordRepeat"
            android:maxLength="21"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_finishReg"
        android:layout_width="234dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_25"
        android:fontFamily="@font/advent_pro_bold"
        android:hapticFeedbackEnabled="false"
        android:text="@string/signup2"
        app:layout_constraintEnd_toEndOf="@+id/input_passwordRepeat"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/input_passwordRepeat"
        app:layout_constraintTop_toBottomOf="@+id/input_passwordRepeat"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txtnameApp2"
        app:layout_constraintEnd_toEndOf="@+id/txtnameApp2"
        app:layout_constraintStart_toStartOf="@+id/txtnameApp2"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>